# depot

./: .gitignore  .pre-commit-config.yaml  .rumdl.toml  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  depot.toml.example
.ai-rulez/: config.toml  config.yaml
.ai-rulez/agents/: cli-engineer.md  core-architect.md  infra-engineer.md  protocol-engineer.md  qa-engineer.md
.ai-rulez/context/: architecture.md  conventions.md
.ai-rulez/rules/: error-handling.md  feature-flags.md  hexagonal-boundaries.md
crates/depot-adapters/: Cargo.toml
crates/depot-adapters/src/: lib.rs
crates/depot-adapters/src/cargo/: mod.rs  models.rs  upstream.rs
crates/depot-adapters/src/hex/: mod.rs  models.rs  upstream.rs
crates/depot-adapters/src/npm/: mod.rs  models.rs  upstream.rs
crates/depot-adapters/src/pypi/: mod.rs  models.rs  upstream.rs
crates/depot-cli/: Cargo.toml
crates/depot-cli/src/: main.rs
crates/depot-cli/src/commands/: lock.rs  serve.rs  sync.rs
crates/depot-core/: Cargo.toml
crates/depot-core/src/: config.rs  error.rs  integrity.rs  lib.rs  lockfile.rs  package.rs  policy.rs  ports.rs
crates/depot-core/src/registry/: hex.rs  mod.rs  pypi.rs
crates/depot-core/testing_data/: 00-FIXTURE-SCHEMA.json
crates/depot-core/testing_data/config/: 01_config_parsing.json
crates/depot-core/testing_data/integrity/: 01_blake3_vectors.json
crates/depot-core/testing_data/lockfile/: 01_roundtrip.json
crates/depot-core/testing_data/package/: 01_pypi_normalization.json  03_ecosystem_parsing.json
crates/depot-core/tests/: generated_tests.rs  registry_types.rs  schema_validation.rs
crates/depot-server/: Cargo.toml
crates/depot-server/src/: app.rs  state.rs
crates/depot-server/src/middleware/: auth.rs  mod.rs
crates/depot-service/: Cargo.toml
crates/depot-service/src/: service.rs
crates/depot-storage/: Cargo.toml
crates/depot-storage/src/: backend.rs
crates/depot-storage/tests/: fs_backend.rs  memory_backend.rs
docs/: architecture.md
docs/adr/: 0001-hexagonal-architecture.md  0002-tower-middleware.md  0003-opendal-storage.md  0004-blake3-lockfile.md  0005-protocol-adapters.md  0006-feature-flags.md  0007-json-schema-validation.md  0008-registry-expansion.md  0009-publishing-upload-workflows.md  0010-cli-mcp-operations.md
schemas/: README.md  manifest.json  sources.toml
schemas/depot/: config.schema.json  lockfile.schema.json
schemas/registries/: cargo-config.schema.json  cargo.schema.json  hex.schema.json  npm.schema.json  nuget-package-base-address.schema.json  nuget-registration.schema.json  nuget-service-index.schema.json  pub-package.schema.json  pypi-index.schema.json  pypi.schema.json
schemas/upstream/sonatype/: central-publisher-openapi.json  nexus-repository-api.json
tests/conformance/: Cargo.toml
tests/conformance/fixtures/cargo/: config.json  sample_index.ndjson
tests/conformance/fixtures/hex/: sample-package.json
tests/conformance/fixtures/maven/: maven-metadata.xml  sample-lib-1.2.0.pom
tests/conformance/fixtures/npm/: sample-packument.json
tests/conformance/fixtures/pypi/: sample-project.json
tests/conformance/fixtures/rubygems/: info-rack  versions
tests/conformance/src/: lib.rs
tests/conformance/tests/: fixture_specs.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: cargo_registry.rs  hex.rs  npm.rs  pypi_pip.rs
tools/schema-manager/: Cargo.toml
tools/schema-manager/src/: main.rs
tools/test-generator/: Cargo.toml
tools/test-generator/src/: main.rs
