[package]
name = "depot-adapters"
description = "Protocol adapters (PyPI, npm, Cargo, Hex) for depot"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = [
    "async-trait",
    "axum",
    "bytes",
    "depot-core",
    "reqwest",
    "serde",
    "serde_json",
    "thiserror",
    "tracing",
]

[features]
default = ["pypi", "npm", "cargo-registry", "hex"]
pypi = []
npm = []
cargo-registry = []
hex = []

[dependencies]
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
depot-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
