[package]
name = "depot-server"
description = "HTTP server and Tower middleware stack for depot"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.cargo-machete]
ignored = ["depot-adapters", "depot-storage", "tokio", "tower", "tracing"]

[dependencies]
axum.workspace = true
depot-adapters.workspace = true
depot-core.workspace = true
depot-storage.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
