[package]
name = "depot-integration-tests"
description = "Integration tests for depot"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
ahash.workspace = true
axum.workspace = true
depot-adapters.workspace = true
depot-core.workspace = true
depot-server.workspace = true
depot-service.workspace = true
depot-storage = { workspace = true, features = ["backend-memory"] }
tokio.workspace = true

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
